sdk/tests/macros_fails/macros_spec_non_pub_fn.rs
use stellar_contract_sdk::contractfn;

#[contractfn]
fn add(a: i32, b: i32) -> i32 {
    unimplemented!()
}

pub fn main() {}
